--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+
+SmartSchool.WebAPI/bin/Debug/*
+SmartSchool.WebAPI/Migrations/*
+SmartSchool.WebAPI/obj/Debug/*
